--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.3",
     "pg": "^8.11.3",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.11.2",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2"
